--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,4 @@
+
 .skip-main a{
     position: absolute;
     top: -40px;
@@ -82,6 +83,8 @@ header h1{
     letter-spacing: 3px;
 }
 
+/* #map { height: 180px; } */
+
 main div.main h2{
     font-size: 20px;
     margin: 0;
@@ -92,8 +95,8 @@ main div.main h2{
 }
 
 div.container{
-    grid-template-rows: repeat(3 1fr);
     display:grid;
+    grid-template-columns: 1fr;
     margin: 25px auto;
     color: #000000;
     overflow: hidden;
@@ -134,18 +137,17 @@ div.container{
     color:#ffffff;
 }
 
-footer p{
+footer{
     text-align: right;
-    margin: 0px 3px 3px 0px;
+    margin: 0px 3px 10px 0px;
     color:#808080;
-    bottom: 0;
     align-content:right;
     font-size: x-small;
 }
 
 .animal-container{
     letter-spacing: 2px;
-    padding: 5px 10px;
+    padding: 0px 10px 5px 10px;
     color: #000000;
     font-size:12px;
 }
@@ -165,96 +167,87 @@ ul{
 .animal-container h2{
     font-weight: 900;
     text-decoration:underline;
+    text-align: center;
+    margin-top: 0px;
 }
 
-#cat-container{
+div#cat-container{
     display: grid;
-    grid-template-rows: repeat(2, 1fr);
-    grid-template-columns: repeat(2, 1fr);
+    grid-template-columns: 1fr;
     place-items: center;
 }
 #cat1{
-    grid-column-start: 1;
-    grid-column-end: 2;
-    grid-row: 1;
+    grid-row-start: 1;
+    margin: 50px;
 }
 
 #cat2{
-    grid-column-start: 2;
-    grid-column-end: 2;
-    grid-row: 1;
+    grid-row-start: 2;
 }
 
 #cat3{
-    grid-column-start: 1;
-    grid-column-end: 2;
-    grid-row: 2;
+    grid-row-start: 4;
+    margin-bottom: 40px;
 }
 #cat4{
-    grid-column-start: 2;
-    grid-column-end: 2;
-    grid-row: 2;
+    grid-column-start: 1;
+    grid-row-start: 3;
+    margin: 50px;
 }
 
 #rabbit-container{
     display: grid;
-    grid-template-rows: repeat(2, 1fr);
-    grid-template-columns: repeat(2, 1fr);
+    grid-template-columns: 1fr;
     place-items: center;
 }
 
 #r1{
-    grid-column-start: 1;
-    grid-column-end: 2;
-    grid-row: 1;
+    grid-row-start: 1;
+    margin: 30px;
 }
 
 #r2{
-    grid-column-start: 2;
-    grid-column-end: 2;
-    grid-row: 1;
+    grid-row-start: 2;
 }
 
 #r3{
-    grid-column-start: 1;
-    grid-column-end: 2;
-    grid-row: 2;
+    grid-row-start: 4;
+    margin-bottom: 40px;
 }
-.animation #r4{
-    grid-column-start: 2;
-    grid-column-end: 2;
-    grid-row: 2;
+#r4{
+    grid-column-start: 1;
+    grid-row-start: 3;
+    margin: 50px;
 }
 
 #guineapig-container{
     display: grid;
-    grid-template-rows: repeat(2, 1fr);
-    grid-template-columns: repeat(2, 1fr);
+    grid-template-columns: 1fr;
     place-items: center;
 }
 #gp1{
-    grid-column-start: 1;
-    grid-column-end: 2;
-    grid-row: 1;
+    grid-row-start: 1;
+    margin: 30px;
 }
 
 #gp2{
-    grid-column-start: 2;
-    grid-column-end: 2;
-    grid-row: 1;
+    grid-row-start: 2;
 }
 
 #gp3{
-    grid-column-start: 1;
-    grid-column-end: 2;
-    grid-row: 2;
+    grid-row-start: 4;
 }
     
-.animation{
-    grid-column-start: 2;
-    grid-column-end: 2;
-    grid-row: 2;
+#gp4{
+    grid-column-start: 1;
+    grid-row-start: 3;
+    margin: 50px;
 }
+
+    .animal-container, .recipe-container, .travel-container{
+        margin: 20px;
+
+    }
 
 @media screen and (prefers-reduced-motion: reduce) {
     .animation {
@@ -364,7 +357,7 @@ ul{
     }
 
     
-    footer p{
+    footer{
         margin: 0px 8px 8px 0px;
     }
     
@@ -412,7 +405,6 @@ ul{
     
     #cat-container, #rabbit-container, #guineapig-container{
         display: grid;
-        grid-template-rows: 4;
         place-items: center;
     }
     
@@ -421,40 +413,138 @@ ul{
         font-size: larger;
         list-style-type: none;
     }
-
-    #cat1{
-        height: 200px;
-        width: 170px;
+    h1#peth1{
+        padding-top: 8rem;
+    }
+    div.animal-container h2{
+        padding:0px;
+        margin-top: 0px;
+        margin-bottom: 40px;
     }
 
-    
-    #cat2, #r2, #gp2{
-        font-size: large;
+    div#cat-container{
+        grid-template-columns: 1fr 1fr;
+        grid-template-rows: 1fr 1fr;
+        grid-gap: 15px;
+        height: 30rem;
+        padding-bottom: 40px;
     }
-    
-    #cat3, #rabbit3, #gp3{
+
+    #cat2{
+        grid-row-start: 2;
         grid-column-start: 1;
-        grid-column-end: 2;
-        grid-row: 2;
-        font-size: medium;
-        line-height: 30px;
-        list-style-type: circle;
     }
 
-    #cat4, #gp4{
-        height: 180px;
-        width: 240px;
-    }
-    
-    
-    #r1, #r4{
-        height: 160px;
-        width: 220px;
-    }
-    
-    #gp1{
-height: 180px;
-width: 205px;
+    #cat4{
+        grid-row-start: 1;
+        grid-column-start: 2;
     }
 
+    #cat3{
+        grid-row-start: 2;
+        grid-column-start: 2;
+    }
+
+    div#rabbit-container{
+        grid-template-columns: 1fr 1fr;
+        grid-template-rows: 1fr 1fr;
+        grid-gap: 15px;
+        height: 30rem;
+        padding-bottom: 40px;
+    }
+
+    #r2{
+        grid-row-start: 2;
+        grid-column-start: 1;
+    }
+
+    #r4{
+        grid-row-start: 1;
+        grid-column-start: 2;
+    }
+
+    #r3{
+        grid-row-start: 2;
+        grid-column-start: 2;
+    }
+
+    div#guineapig-container{
+        grid-template-columns: 1fr 1fr;
+        grid-template-rows: 1fr 1fr;
+        grid-gap: 15px;
+        height: 30rem;
+        padding-bottom: 40px;
+    }
+
+    #gp2{
+        grid-row-start: 2;
+        grid-column-start: 1;
+    }
+
+    #gp4{
+        grid-row-start: 1;
+        grid-column-start: 2;
+    }
+
+    #gp3{
+        grid-row-start: 2;
+        grid-column-start: 2;
+    }
+
+  }
+
+
+  @media screen and (min-width: 1020px){
+    header h1 {
+        font-size: 40px;
+        letter-spacing: 2px;
+        padding: 10rem 0.25rem 2rem 0.25rem;
+    }
+    nav, body, nav ul{
+        width: 80%;
+    }
+
+    main{
+        padding-bottom: 5rem;
+    }
+
+
+    div.container{
+        grid-template-columns: 1fr 1fr 1fr;
+        margin-top: 5rem;
+        grid-gap: 2rem;
+    }
+    div.container > div{
+
+        border: white solid 2px;
+    }
+
+
+    main div.main h2 {
+        font-size: 20px;
+        padding: 30px 90px 50px 90px;
+        text-align: left;
+        font-weight: 500;
+        letter-spacing: 2px;
+    }
+
+div.animal-container{
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    align-items: center;
+    overflow:scroll;
+    overflow-x:scroll;
+}
+
+div.animal-container h2 {
+    text-decoration: none;
+}
+
+
+    footer{
+    position:static;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    }
   }
